[package]
name = "tokio-copy-with-buffer"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>", "Alex Crichton <alex@alexcrichton.com>"]
repository = "https://github.com/vi/tokio-copy-with-buffer"
documentation = "https://docs.rs/tokio-copy-with-buffer/0.1"
categories = ["asynchronous"]
description = """
tokio_io::io::copy that can take additional buffer parameter and also returns if back to you.
"""

[dependencies]
futures = "0.1"
tokio-io = "0.1"
